lab13/target.yaml
apiVersion: v1
kind: Pod
metadata:
  name: target
  namespace: lab13
  labels: { app: target }
spec:
  containers:
  - name: app
    image: busybox:1.36
    imagePullPolicy: IfNotPresent
    command: ["/bin/sh", "-c", "while true; do nc -lk -p 5678 -e echo OK; done"]
    ports:
    - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: target-svc
  namespace: lab13
spec:
  selector: { app: target }
  ports:
  - port: 5678
    targetPort: 5678
