lab13/allow-other-ns-client.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client-other-ns
  namespace: lab13
spec:
  podSelector:
    matchLabels: { app: target }
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels: { purpose: testing }
      podSelector:
        matchLabels: { role: client }
    ports:
    - protocol: TCP
      port: 5678
