lab13/allow-same-ns-client.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client-same-ns
  namespace: lab13
spec:
  podSelector:
    matchLabels: { app: target }
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels: { role: client }
    ports:
    - protocol: TCP
      port: 5678
